syntax = "proto3";
package virtengine.bme.v1;

option go_package = "github.com/virtengine/virtengine/sdk/go/node/bme/v1";

// Params defines the parameters for the BME module
message Params {
  // circuit_breaker_warn_threshold is the CR below which warning is triggered
  // Stored as basis points * 100 (e.g., 9500 = 0.95)
  uint32 circuit_breaker_warn_threshold = 1;

  // circuit_breaker_halt_threshold is the CR below which mints are halted
  // Stored as basis points * 100 (e.g., 9000 = 0.90)
  uint32 circuit_breaker_halt_threshold = 2;

  // min_epoch_blocks is the minimum amount of blocks required for ACT mints
  int64 min_epoch_blocks = 3;

  // epoch_blocks_backoff increase of runway_blocks in % during warn threshold
  // for drop in 1 basis point of circuit_breaker_warn_threshold
  // Stored as basis points * 100 (e.g., 9500 = 0.95)
  // e.g: runway_blocks = 100
  //      min_runway_blocks_backoff = 1000
  //      circuit_breaker_warn_threshold drops from 0.95 to 0.94
  //      then runway_blocks = (100*0.1 + 100) = 110
  //
  //      circuit_breaker_warn_threshold drops from 0.94 to 0.92
  //      then runway_blocks = (110*(0.1*2) + 110) = 132
  uint32 epoch_blocks_backoff = 4;

  // mint_spread_bps is the spread in basis points applied during ACT mint
  // (default: 25 bps = 0.25%)
  uint32 mint_spread_bps = 6;

  // settle_spread_bps is the spread in basis points applied during settlement
  // (default: 0 for no provider tax)
  uint32 settle_spread_bps = 7;
}
